--- a/DocumentProcessor.JJHH17/DocumentProcessor.JJHH17/DocumentProcessor.JJHH17.csproj
+++ b/DocumentProcessor.JJHH17/DocumentProcessor.JJHH17/DocumentProcessor.JJHH17.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.9" />
     <PackageReference Include="Spectre.Console" Version="0.52.0" />
     <PackageReference Include="Spectre.Console.Cli" Version="0.52.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.9" />
