--- a/DocumentProcessor.JJHH17/DocumentProcessor.JJHH17/Configurations/App.config
+++ b/DocumentProcessor.JJHH17/DocumentProcessor.JJHH17/Configurations/App.config
@@ -3,5 +3,6 @@
 	<appSettings>
 		<add key="Server" value="localdb"/>
 		<add key="DatabaseName" value="documentProcessor"/>
+		<add key="AzureBlobConnectionString" value="CONNECTIONSTRING"/>
 	</appSettings>
 </configuration>
