Added container name reference to app.config

--- a/DocumentProcessor.JJHH17/DocumentProcessor.JJHH17/Configurations/App.config
+++ b/DocumentProcessor.JJHH17/DocumentProcessor.JJHH17/Configurations/App.config
@@ -3,6 +3,7 @@
 	<appSettings>
 		<add key="Server" value="localdb"/>
 		<add key="DatabaseName" value="documentProcessor"/>
-		<add key="AzureBlobConnectionString" value="CONNECTIONSTRING"/>
+		<add key="AzureBlobConnectionString" value="NAMEHERE"/>
+		<add key="ContainerName" value="NAMEHERE"/>
 	</appSettings>
 </configuration>
